2006-08-09  Johan Bilien <johan.bilien@nokia.com>

	* configure.ac: 2.9.19-1

2006-08-09  Johan Bilien <johan.bilien@nokia.com>

	* hildon-navigator/hn-keys.c: Fixed a crash I just introduced when
	  fixing the sardine warning

2006-08-09  Johan Bilien <johan.bilien@nokia.com>

	* hildon-status-bar/hildon-status-bar-main.c: Fixed  a crash
	  when the event RPC method was called and the plugin could not
	  be found

2006-08-09  Johan Bilien <johan.bilien@nokia.com>

	* hildon-navigator/plugins.conf: corrected .desktop filename for the
	  contact plugin
	* configure.ac: 2.9.18.1

2006-08-08  Johan Bilien <johan.bilien@nokia.com>

	* hildon-navigator/hn-entry-info.c: Fixed a gcc warning
	* configure.ac: 2.9.18

2006-08-08  Johan Bilien <johan.bilien@nokia.com>

	* hildon-navigator/plugins.conf: Second plugin is not mandatory
	  anymore

2006-08-08  Johan Bilien <johan.bilien@nokia.com>

	* hildon-navigator/hn-keys.c: Fixed a warning which happened in the
	  sardine environment

2006-08-08  Johan Bilien <johan.bilien@nokia.com>

	* hildon-navigator/hn-keys.c: Use the new MCE dbus API to trigger a
	  power key event (Closes NB#33771)

2006-08-08  Johan Bilien <johan.bilien@nokia.com>

	Applied fix to "The SWAP key does not bring back the previously topped
	application" (Closes NB#36149)
	* hn_wm_toggle_desktop(): toggles between topping last app and 
	  topping the desktop.

2006-08-08  Johan Bilien <johan.bilien@nokia.com>

	* hildon-status-bar/hildon-status-bar-main.c: gtk_object_sink
	  the items to get rid to the floating reference, to be sure
	  that the items get finalized when reloaded (Closes NB#37028)

2006-08-08  Johan Bilien <johan.bilien@nokia.com>

	Applied fix to "Width of the 'Others' menu gets altered in normal mode
	after opening it in thumb mode." (Closes NB#36135)
	* hildon-navigator/others-menu.c:
	  - others_menu_size_request(): if request size is not bigger than menu
	    max width, reset menu size request
